modificando estrutura de pasta, padrao angular

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MsSqlConnection": {
-    "MsSqlConnectionString": "Server=RAFAEL-PC\\SQLEXPRESS;Database=appointment_schedule;User Id=RAFAEL-PC\\rafecu;Trusted_Connection=true;"
+    "MsSqlConnectionString": "Server=E5AT86\\SQLEXPRESS;Database=appointment_schedule;User Id=SEFAZ\\rafael.honorio;Trusted_Connection=true;"
   },
   "Logging": {
     "LogLevel": {
