--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.1.10",
-    "@angular/common": "6.1.10",
+    "@angular/common": "^6.1.10",
     "@angular/compiler": "6.1.10",
     "@angular/core": "6.1.10",
     "@angular/forms": "6.1.10",
@@ -23,14 +23,16 @@
     "@angular/platform-server": "6.1.10",
     "@angular/router": "6.1.10",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
+    "angular2-text-mask": "^9.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "3.3.1",
     "ng2-search-filter": "^0.5.1",
-    "ngx-bootstrap": "^5.1.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.0.0",
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-mask": "^8.0.5",
+    "popper.js": "^1.14.7",
+    "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
