--- a/AppointmentSchedule/AppointmentScheduleITIX.csproj
+++ b/AppointmentSchedule/AppointmentScheduleITIX.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
